atualizacao: logo-orsoskateboard de SVG para PNG

--- a/shop.html
+++ b/shop.html
@@ -17,7 +17,7 @@
         <div class="toggle-btn">
           <ion-icon class="icon-menu" name="menu-outline"></ion-icon>
         </div>
-        <a href="index.html"><img class="header-logo" src="./img/logo-orsoskateboard.svg"></a>
+        <a href="index.html"><img class="header-logo" src="./img/logo-orsoskateboard.png"></a>
       </div>
   <!-- BUSCA - BTN -->
     <div class="header-busca">
@@ -76,7 +76,7 @@
         </ul>
       </div>
   <!-- LOGO -->
-      <img class="footer-logo" src="./img/logo-orsoskateboard.svg">
+      <img class="footer-logo" src="./img/logo-orsoskateboard.png">
   <!-- CONTATO -->
       <div class="footer-contato">
         <h3 class="titulo-contato">CONTATO</h3>
