--- a/camiseta-selecionada.html
+++ b/camiseta-selecionada.html
@@ -123,7 +123,7 @@
     <p class="footer-direitos">Copyrigth © 2024 ORSO.   Todos os direitos reservados.</p>
   </footer>
 
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
   <script src="./Produtos_API/camisetas-api.js"></script>
 </body>
 </html>
