--- a/shop.html
+++ b/shop.html
@@ -88,7 +88,7 @@
     <p class="footer-direitos">Copyrigth © 2024 ORSO. Todos os direitos reservados.</p>
   </footer> 
 
-  <script src="script.js"></script>
+  <script tyoe="module" src="script.js"></script>
   <script src="./Produtos_API/camisetas-api.js"></script>
 </body>
 </html>
