--- a/Paginas/camiseta.html
+++ b/Paginas/camiseta.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../style.css">
 
   <title>Orso Skateboard - Camiseta</title>
 </head>
@@ -17,13 +17,15 @@
       <div class="toggle-btn">
         <ion-icon class="icon-menu" name="menu-outline"></ion-icon>
       </div>
-      <a href="index.html"><img class="header-logo" src="./img/logo-orsoskateboard.png"></a>
+      <a href="../index.html"><img class="header-logo" src="../img/logo-orsoskateboard.png"></a>
     </div>
+
   <!-- BUSCA - BTN -->
     <div class="header-busca">
       <input type="text" name="" id="txtbusca" placeholder="O que você procura?">
       <button class="btn-busca">Buscar</button>
     </div>
+    
   <!-- NAV -->
     <nav class="nav-list">
       <ul>
@@ -43,17 +45,17 @@
         <span>0</span>
       </div>
     </nav>
-  </header>
 
-  <!-- CARRINHO -->
-  <div class="cart-add" id="cart-add">
-    <div class="cabecalho-cart">
-      <ion-icon name="cart-outline"></ion-icon>
-      <h2 class="titulo-cart">Carrinho</h2>
+    <!-- CARRINHO -->
+    <div class="cart-add" id="cart-add">
+      <div class="cabecalho-cart">
+        <ion-icon name="cart-outline"></ion-icon>
+        <h2 class="titulo-cart">Carrinho</h2>
+      </div>
+      <div class="cart-list">
+      </div>
     </div>
-    <div class="cart-list">
-    </div>
-  </div>
+  </header>
 
   <main class="main">
   <!-- MAIN - PRODUTO SELECIONADO -->
@@ -111,7 +113,7 @@
         </ul>
       </div>
   <!-- LOGO -->
-      <img class="footer-logo" src="./img/logo-orsoskateboard.png">
+      <img class="footer-logo" src="../img/logo-orsoskateboard.png">
   <!-- CONTATO -->
       <div class="footer-contato">
         <h3 class="titulo-contato">CONTATO</h3>
@@ -123,7 +125,7 @@
     <p class="footer-direitos">Copyrigth © 2024 ORSO.   Todos os direitos reservados.</p>
   </footer>
 
-  <script type="module" src="script.js"></script>
-  <script src="./Produtos_API/camisetas-api.js"></script>
+  <script type="module" src="../script.js"></script>
+  <script src="../Camisetas_JSON/camisetas.js"></script>
 </body>
 </html>
