--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Orso Skateboard - Loja</title>
 </head>
 <body>
-  <!-- HEADER -->
+
   <header class="header">
     <div class="titulo-menu">
       <div class="toggle-btn">
@@ -20,13 +20,11 @@
       <a href="index.html"><img class="header-logo" src="./img/logo-orsoskateboard.png"></a>
     </div>
     
-  <!-- BUSCA - BTN -->
     <div class="header-busca">
       <input type="text" name="" id="txtbusca" placeholder="O que você procura?">
       <button class="btn-busca">Buscar</button>
     </div>
 
-  <!-- NAV -->
     <nav class="nav-list">
       <ul>
         <li class="list"><a href="./Paginas/shop.html">Shop</a></li>
@@ -35,18 +33,17 @@
         <li><ion-icon name="cart-outline" class="icon-cart"></ion-icon></li>
       </ul>
 
+      <div class="produtos-add">
+        <span>0</span>
+      </div>
+
       <div class="dropdown-menu">
         <li><a href="./Paginas/login.html">Login</a></li>
         <li><a href="./Paginas/shop.html">Shop</a></li>
         <li><a href="https://showroom-orsoskateboard.vercel.app/" target="_blank">Showroom</a></li>
       </div>
-
-      <div class="produtos-add">
-        <span>0</span>
-      </div>
     </nav>
 
-    <!-- CARRINHO -->
     <div class="cart-add" id="cart-add">
       <div class="cabecalho-cart">
         <ion-icon name="cart-outline"></ion-icon>
@@ -57,7 +54,6 @@
     </div>
   </header>
 
-  <!-- MAIN-BANNER ORSO -->
   <main class="main">
     <div class="main-img">
       <img src="img/Capa-OrsoSkateboard.png" alt="">
@@ -67,28 +63,27 @@
     </div>
   </main>
 
-  <!-- RODAPÉ -->
   <footer>
     <div class="footer-div">
-  <!-- REDES -->
+
       <div class="footer-redes">
         <ul>
-          <li class="redes"><a href="#"><ion-icon name="logo-facebook" class="icon"></ion-icon>Facebook</a></li>
-          <li class="redes"><a href="#"><ion-icon name="logo-instagram" class="icon"></ion-icon>Instagram</a></li>
-          <li class="redes"><a href="#"><ion-icon name="logo-twitter" class="icon"></ion-icon>Twitter</a></li>
-          <li class="redes"><a href="#"><ion-icon name="logo-youtube" class="icon"></ion-icon>Youtube</a></li>
+          <li class="redes"><a href="#"><ion-icon name="logo-facebook" class="icon"></ion-icon>Orso Skateboard</a></li>
+          <li class="redes"><a href="#"><ion-icon name="logo-instagram" class="icon"></ion-icon>@orsoskateboard</a></li>
+          <li class="redes"><a href="#"><ion-icon name="logo-twitter" class="icon"></ion-icon>@orsoskateboard</a></li>
+          <li class="redes"><a href="#"><ion-icon name="logo-youtube" class="icon"></ion-icon>Orso Skateboard</a></li>
         </ul>
       </div>
-  <!-- LOGO -->
+
       <img class="footer-logo" src="./img/logo-orsoskateboard.png">
-  <!-- CONTATO -->
+
       <div class="footer-contato">
         <h3 class="titulo-contato">CONTATO</h3>
-        <span><ion-icon name="mail-outline" class="icon"></ion-icon>ORSOskateboard@gmail.com</span>
+        <span><ion-icon name="mail-outline" class="icon"></ion-icon>orsoskateboard@gmail.com</span>
         <span><ion-icon name="call-outline" class="icon"></ion-icon>+55 (11) 9 9999-9999</span>
       </div>
     </div>
-  <!-- COPYRIGTH -->
+
     <p class="footer-direitos">Copyrigth © 2024 ORSO.   Todos os direitos reservados.</p>
   </footer>
 
